Atcoder/RealTime/abc178/a/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/RealTime/abc178/a/main.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/RealTime/abc178/a/main.cpp:350:37: error: no match for 'operator=' (operand types are 'std::string' {aka 'std::__cxx11::basic_string<char>'} and 'void')
  350 |     if(s[n-1]=='s')s=s.push_back('e');
      |                                     ^
In file included from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/string:55,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/locale_classes.h:40,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/ios_base.h:41,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/ios:42,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/istream:38,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/sstream:38,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/complex:45,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/ccomplex:39,
                 from /usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/x86_64-apple-darwin19/bits/stdc++.h:54,
                 from /Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/RealTime/abc178/a/main.cpp:6:
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:665:7: note: candidate: 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
  665 |       operator=(const basic_string& __str)
      |       ^~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:665:37: note:   no known conversion for argument 1 from 'void' to 'const std::__cxx11::basic_string<char>&'
  665 |       operator=(const basic_string& __str)
      |                 ~~~~~~~~~~~~~~~~~~~~^~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:675:7: note: candidate: 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
  675 |       operator=(const _CharT* __s)
      |       ^~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:675:31: note:   no known conversion for argument 1 from 'void' to 'const char*'
  675 |       operator=(const _CharT* __s)
      |                 ~~~~~~~~~~~~~~^~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:686:7: note: candidate: 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
  686 |       operator=(_CharT __c)
      |       ^~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:686:24: note:   no known conversion for argument 1 from 'void' to 'char'
  686 |       operator=(_CharT __c)
      |                 ~~~~~~~^~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:703:7: note: candidate: 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
  703 |       operator=(basic_string&& __str)
      |       ^~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:703:32: note:   no known conversion for argument 1 from 'void' to 'std::__cxx11::basic_string<char>&&'
  703 |       operator=(basic_string&& __str)
      |                 ~~~~~~~~~~~~~~~^~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:766:7: note: candidate: 'std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(std::initializer_list<_Tp>) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
  766 |       operator=(initializer_list<_CharT> __l)
      |       ^~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:766:42: note:   no known conversion for argument 1 from 'void' to 'std::initializer_list<char>'
  766 |       operator=(initializer_list<_CharT> __l)
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:780:8: note: candidate: 'template<class _Tp> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::_If_sv<_Tp, std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&> std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _Tp&) [with _Tp = _Tp; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]'
  780 |        operator=(const _Tp& __svt)
      |        ^~~~~~~~
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:780:8: note:   template argument deduction/substitution failed:
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h: In substitution of 'template<class _CharT, class _Traits, class _Alloc> template<class _Tp, class _Res> using _If_sv = std::enable_if_t<std::__and_<std::is_convertible<const _Tp&, std::basic_string_view<_CharT, _Traits> >, std::__not_<std::is_convertible<const _Tp*, const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>*> >, std::__not_<std::is_convertible<const _Tp&, const _CharT*> > >::value, _Res> [with _Tp = void; _Res = std::__cxx11::basic_string<char>&; _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]':
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:780:8:   required by substitution of 'template<class _Tp> std::__cxx11::basic_string<char>::_If_sv<_Tp, std::__cxx11::basic_string<char>&> std::__cxx11::basic_string<char>::operator=<_Tp>(const _Tp&) [with _Tp = void]'
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/RealTime/abc178/a/main.cpp:350:37:   required from here
/usr/local/Cellar/gcc/10.1.0/include/c++/10.1.0/bits/basic_string.h:117:8: error: forming reference to void
  117 |  using _If_sv = enable_if_t<
      |        ^~~~~~
